Added python script for auto building

--- a/tools/helight_baker/Cargo.toml
+++ b/tools/helight_baker/Cargo.toml
@@ -4,11 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [profile.release]
-# lto = true
-# codegen-units = 1
-# opt-level = 3
-# strip = true
-# debug = false
+lto = true
+codegen-units = 1
+opt-level = 3
+strip = true
+debug = false
 
 
 
